--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Renders images in a container hhorizontally in rows to fill full width (exept last line).",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/glassShard/eqHorizontal/issues"
   },
-  "homepage": "https://github.com/glassShard/eqHorizontal#readme"
+  "homepage": "https://github.com/glassShard/eqHorizontal#readme",
+  "devDependencies": {
+    "lite-server": "^2.5.4",
+    "ts-loader": "^8.0.7",
+    "typescript": "^4.0.5",
+    "webpack": "^5.3.0",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0"
+  }
 }
