--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "eqhorizontal",
   "version": "1.0.0",
-  "description": "Renders images in a container hhorizontally in rows to fill full width (exept last line).",
+  "description": "Renders images in a container horizontally in rows to fill full width (exept last line).",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
-    "build": "webpack"
+    "build": "webpack --config webpack.config.prod.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/glassShard/eqHorizontal#readme",
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.0",
     "lite-server": "^2.5.4",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
-    "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
